tests/transpiler/x/py/left_join.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/left_join.py", line 24, in <module>
    result = [Result(o.id, c, o.total) for o in orders for c in [c for c in customers if o.customerId == c["id"]] or [None]]
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/transpiler/x/py/left_join.py", line 24, in <listcomp>
    result = [Result(o.id, c, o.total) for o in orders for c in [c for c in customers if o.customerId == c["id"]] or [None]]
                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/transpiler/x/py/left_join.py", line 24, in <listcomp>
    result = [Result(o.id, c, o.total) for o in orders for c in [c for c in customers if o.customerId == c["id"]] or [None]]
                                                                                                         ~^^^^^^
TypeError: 'Customer' object is not subscriptable
