tests/transpiler/x/py/left_join.py
# Code generated by Mochi v0.10.34 - DO NOT EDIT
from dataclasses import dataclass
from typing import List, Dict

@dataclass
class Customer:
    id: int
    name: str

customers = [Customer(1, "Alice"), Customer(2, "Bob")]
@dataclass
class Order:
    id: int
    customerId: int
    total: int

orders = [Order(100, 1, 250), Order(101, 3, 80)]
@dataclass
class Result:
    orderId: int
    customer: any
    total: int

result = [Result(o.id, c, o.total) for o in orders for c in [c for c in customers if o.customerId == c["id"]] or [None]]
print("--- Left Join ---")
for entry in result:
    print(" ".join(str(x) for x in ["Order", entry["orderId"], "customer", entry["customer"], "total", entry["total"]]).rstrip())
